# multi_camera_demo

./: .gitignore  CMakeLists.txt  main.cpp
config/: all-cams-config.yaml  all-lens-config.yaml  camera_init.yaml  camera_lens.yaml  hardware-init.yaml
config/cameras/: 00F02724098.txt  MV-CA003-21UC_00D59818552.mfs  MV-CA003-21UC_00F02724098.mfs
modules/camera-base/: camera.h  camera_base.h  camera_factory.h
modules/camera-dh/: camera_dh.cpp  camera_dh.h  dh_camera.cpp  dh_camera.h
modules/camera-hik/: camera_hik.cpp  camera_hik.h  hik_camera.cpp  hik_camera.h
modules/data-structures/: circular_buffer.h  frame.h
modules/image-provider-base/: buffer.h  frame.h  image_provider.h  image_provider_base.h  image_provider_factory.h
modules/image-provider-camera/: image_provider_camera.cpp  image_provider_camera.h
modules/image-provider-video/: image_provider_video.cpp  image_provider_video.h
modules/yaml/: yaml.cpp  yaml.h
